# Email-Maestro

./: .env.app.example  .env.hf.space.example  .env.training.example  .gitignore  AGENTS.md  Dockerfile  PRD.md  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.training.txt  requirements.txt  run.py  test_env.py  training_env.executed.ipynb  training_env.ipynb
docs/: HF_SPACE_README.md
scripts/: deploy_hf_space.py  deploy_hf_space.sh  evaluate_policies.py  run_policy_episode.py  setup_app_env.sh  setup_training_env.sh  train_rl_agent.py
server/: app.py
src/: __init__.py
src/autonomous_executive_assistant_sandbox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/executive_assistant/: __init__.py  agent.py  config.py  deployment.py  env.py  graders.py  llm_service.py  models.py  prompts.py  runner.py  seeds.py  training.py  workspace.py
src/server/: app.py
tests/: test_agent.py  test_app.py  test_config.py  test_deployment.py  test_env.py  test_inference.py  test_llm_service.py  test_models.py  test_runner.py  test_training.py  test_workspace.py
