[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-executive-assistant-sandbox"
version = "0.1.0"
description = "Deterministic executive assistant environment backed by an in-memory SQLite workspace."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"fastapi>=0.115.0",
	"gradio>=5.0.0",
	"openai>=1.76.0",
	"openenv-core>=0.2.0",
	"pydantic>=2.8.0",
	"pytest>=8.0.0",
	"PyYAML>=6.0.0",
	"uvicorn>=0.30.0",
]

[project.scripts]
server = "src.server.app:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["app"]

[tool.setuptools.packages.find]
where = ["src"]
